# Rust-BaipiaoGPT

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: macros.rs  messages.rs  models.rs  services.rs
server/: Cargo.toml
server/src/: controllers.rs  headers.rs  macros.rs  main.rs
src/: controllers.rs  lib.rs  main.rs  messages.rs  services.rs
webpage/: Cargo.toml  Trunk.toml  index.html  index.scss
webpage/src/: lib.rs  main.rs
webpage/src/components/: mod.rs
webpage/src/components/dialog/: dialog.scss  mod.rs
webpage/src/components/dialog_item/: dialogItem.scss  mod.rs
webpage/src/components/footer/: footer.scss  mod.rs
webpage/src/components/header/: header.scss  mod.rs
webpage/src/components/title/: mod.rs  title.scss
webpage/src/store/: dialog_message.rs  dialog_store.rs  input_content.rs  is_requesting.rs  mod.rs
webpage/utils/: preset_questions.json
