[package]
name = "server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
serde_json = "1.0.105"
tokio = { version = "1.28.2", features = ["full"] }
core = { path = "../core" }