[package]
name = "webpage"
version = "1.0.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
grass = { version = "0.13.1", features = ["macro"] }
stylist = { version = "0.12.1", features = ["yew", "parser"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["CssStyleDeclaration"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
gloo-console = "0.3.0"
core = { path = "../core" }